--- a/style.css
+++ b/style.css
@@ -83,6 +83,14 @@ li {
     color: #7342d6;
 }
 
+
+h5 {
+    font-size: 18px;
+    margin-bottom: 1rem;
+    color: #7342d6;
+    letter-spacing: 2px;
+}
+
 /* LANDING */ 
 
 .header__wrapper {
@@ -157,4 +165,63 @@ li {
 
 /* SERVICES */
 
-.service__
+.service__title--wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.service__subtitle {
+    font-size: 48px;
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+
+.service__para {
+    width: 100%;
+    max-width: 650px;
+    margin-top: 24px;
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.625;
+    font-weight: 500;
+    color: rgb(160, 174, 192);
+}
+
+.services {
+    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.service {
+    display: flex;
+    width: calc(100%/3);
+    padding: 32px 16px;
+    
+}
+
+.service__description {
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 22px 12px;
+}
+
+.service__icon {
+    padding: 10px 20px 0 24px ;
+    font-size: 36px;
+    
+}
+
+.service__description--title {
+    padding-bottom: 14px;
+    font-size: 24px;
+}
+
+.service__description--para {
+    margin-bottom: 20px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.625;
+    color: rgb(160, 174, 192);
+}
