--- a/style.css
+++ b/style.css
@@ -28,6 +28,20 @@ img {
 }
 
 
+h5 {
+    font-size: 18px;
+    margin-bottom: 1rem;
+    color: #7342d6;
+    letter-spacing: 2px;
+}
+
+.purple {
+    color: #7342d6;
+}
+
+/* NAV */
+
+
 .nav__container {
     display: flex;
     justify-content: space-between;
@@ -77,18 +91,6 @@ li {
     color: white;
     background-color: #7342d6;
     padding: 16px 42px;
-}
-
-.purple {
-    color: #7342d6;
-}
-
-
-h5 {
-    font-size: 18px;
-    margin-bottom: 1rem;
-    color: #7342d6;
-    letter-spacing: 2px;
 }
 
 /* LANDING */ 
@@ -185,7 +187,7 @@ h5 {
     text-align: center;
     line-height: 1.625;
     font-weight: 500;
-    color: rgb(160, 174, 192);
+    color: rgb(124 139 161) ;
 }
 
 .services {
@@ -197,31 +199,146 @@ h5 {
 .service {
     display: flex;
     width: calc(100%/3);
-    padding: 32px 16px;
+    padding: 32px 18px;
     
 }
 
 .service__description {
     display: flex;
     flex-direction: column;
-    margin: 0 0 22px 12px;
+    margin: 0 0 20px 14px;
 }
 
 .service__icon {
-    padding: 10px 20px 0 24px ;
-    font-size: 36px;
-    
+    font-size: 24px;
+    color: #7342d6;
+    height: 60px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid rgb(226, 232, 240);
+    border-radius: 9999px;
+    padding: 18px;
 }
 
+
 .service__description--title {
-    padding-bottom: 14px;
+    padding-bottom: 18px;
     font-size: 24px;
 }
 
 .service__description--para {
     margin-bottom: 20px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 500;
+    line-height: 2;
+    color: rgb(124 139 161);
+}
+
+/* QUALITY */
+
+.quality__wrapper {
+    display: flex;
+}
+
+.quality__description {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+}
+
+.quality__subtitle {
+    font-size: 48px;
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+
+
+.quality__para {
+    width: 100%;
+    max-width: 650px;
+    margin-top: 24px;
+    font-size: 18px;
     line-height: 1.625;
-    color: rgb(160, 174, 192);
+    font-weight: 500;
+    color: rgb(124 139 161);
+    margin-bottom: 50px;
+}
+
+.quality__btn {
+    width: 20%;
+    height: 10%;
+    background-color: #7342d6;
+    color: white;
+    border-radius: 9999px;
+    font-size: 14px;
+    font-weight: 600;
+    border-style: none;
+}
+
+.quality__img {
+    width: 50%;
+    border: 1px solid rgb(226, 232, 240);
+}
+
+
+/* STEPS */
+
+
+.steps__wrapper {
+    display: flex;
+}
+
+.steps__img {
+    width: 50%;
+}
+
+.steps__description {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+}
+
+.steps__subtitle {
+    font-size: 48px;
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+
+
+.steps__list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 12px;
+}
+
+.step {
+    display: flex;
+    margin-top: 24px;
+    max-width: 400px;
+}
+
+.step__num {
+    font-size: 36px;
+    font-weight: 600;
+    color: rgb(203 213 224);
+}
+
+.step__text {
+    margin-left: 32px;
+}
+
+h6 {
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.step__para {
+    margin-top: 12px;
+    font-size: 16px;
+    line-height: 2;
+    color: rgb(113 128 150);
 }
