--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ img {
     margin: 0 auto;
 }
 
+h2 {
+    font-size: 48px;
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+
 
 h5 {
     font-size: 18px;
@@ -51,6 +57,7 @@ h5 {
 
 .logo {
     width: 50px;
+    margin-right: 16px;
 }
 
 ul {
@@ -64,7 +71,6 @@ li {
 .nav__link {
     margin: 0 24px;
     text-decoration: none;
-    font-size: 20px;
     color: #243e63;
     font-weight: bold;
 }
@@ -73,7 +79,9 @@ li {
     display: flex;
     align-items: center;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 28px;
+    font-weight: 900;
+    color: black;
 }
 
 .logo__title {
@@ -173,11 +181,6 @@ li {
     align-items: center;
 }
 
-.service__subtitle {
-    font-size: 48px;
-    font-weight: 900;
-    letter-spacing: 2px;
-}
 
 .service__para {
     width: 100%;
@@ -249,12 +252,6 @@ li {
     margin-right: 20px;
 }
 
-.quality__subtitle {
-    font-size: 48px;
-    font-weight: 900;
-    letter-spacing: 2px;
-}
-
 
 .quality__para {
     width: 100%;
@@ -269,7 +266,7 @@ li {
 
 .quality__btn {
     width: 20%;
-    height: 10%;
+    height: 50px;
     background-color: #7342d6;
     color: white;
     border-radius: 9999px;
@@ -293,31 +290,27 @@ li {
 
 .steps__img {
     width: 50%;
+    display: flex;
+    align-items: center;
 }
 
 .steps__description {
     width: 50%;
     display: flex;
     flex-direction: column;
-    margin-left: 40px;
-}
-
-.steps__subtitle {
-    font-size: 48px;
-    font-weight: 900;
-    letter-spacing: 2px;
+    margin-left: 36px;
 }
 
 
 .steps__list {
     display: flex;
     flex-direction: column;
-    margin-top: 12px;
+    margin-top: 10px;
 }
 
 .step {
     display: flex;
-    margin-top: 24px;
+    margin-top: 10px;
     max-width: 400px;
 }
 
@@ -337,8 +330,202 @@ h6 {
 }
 
 .step__para {
-    margin-top: 12px;
+    margin-top: 10px;
     font-size: 16px;
     line-height: 2;
     color: rgb(113 128 150);
+}
+
+
+/* VALUES */
+
+.values__wrapper {
+    display: flex;
+}
+
+.values__description {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-right: 24px;
+}
+
+
+.values__para {
+    width: 100%;
+    max-width: 550px;
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 1.625;
+    font-weight: 500;
+    color: rgb(124 139 161);
+}
+
+.values {
+    display: flex;
+    margin: 28px 0 48px;
+}
+
+.affordable__value{
+    width: 50%;
+    margin-right: 22px;
+}
+
+.affordable__title {
+    display: flex;
+    align-items: center;
+}
+
+.affordable__sign {
+    font-size: 20px;
+    color: rgb(39 103 73 );
+    background-color: rgb(154 230 180);
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid rgb(226, 232, 240);
+    border-radius: 9999px;
+}
+
+.affordable__subtitle {
+    margin-left: 12px;
+    font-weight: 700;
+}
+
+.affordable__para {
+    margin-top: 10px;
+    line-height: 1.5;
+    color: rgb(113 128 150);
+}
+
+
+.professionalism__value {
+    width: 50%;
+}
+
+.professionalism__title {
+    display: flex;
+    align-items: center;
+}
+
+.professionalism__sign {
+    font-size: 20px;
+    color:rgb(155 44 44);
+    background-color: rgb(254 178 178);
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid rgb(226, 232, 240);
+    border-radius: 9999px;
+}
+
+.professionalism__subtitle {
+    margin-left: 12px;
+    font-weight: 700;
+}
+
+.professionalism__para {
+    margin-top: 10px;
+    line-height: 1.5;
+    color: rgb(113 128 150);
+    
+}
+
+
+
+.values__btn {
+    width: 20%;
+    height: 50px;
+    background-color: #7342d6;
+    color: white;
+    border-radius: 9999px;
+    font-size: 14px;
+    font-weight: 600;
+    border-style: none;
+}
+
+
+.values__img {
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+
+/* PRICES */
+
+.prices__title--wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.prices__para {
+    width: 100%;
+    max-width: 650px;
+    margin-top: 24px;
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.625;
+    font-weight: 500;
+    color: rgb(124 139 161) ;
+}
+
+
+.plans {
+    display: flex;
+    /* flex wrap for media queries*/
+    margin-top: 50px;
+}
+
+
+.plan {
+    display: flex;
+    width: calc(100%/3);
+    flex-direction: column;
+    text-align: center;
+    margin: 0 24px;
+}
+
+.business__primary {
+    color: white;
+    background-color: rgb(100 21 255);
+}
+
+.plan__title--wrapper {
+    padding: 40px 0;
+    border: 2px solid rgb(113 128 150);
+
+}
+
+h4 {
+    font-size: 22px;
+    font-weight: 700;
+    letter-spacing: 1.25px;
+}
+
+.plan__price {
+    padding: 16px 0;
+    font-size: 48px;
+}
+
+
+.price__duration {
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+.plan__features {
+    border-bottom: 2px solid rgb(113 128 150);
+    border-left: 2px solid rgb(113 128 150);
+    border-right: 2px solid rgb(113 128 150);
+    padding: 32px;
+}
+
+.feature {
+    margin-top: 16px;
 }
