--- a/style.css
+++ b/style.css
@@ -478,6 +478,7 @@ h6 {
 
 .plans {
     display: flex;
+    align-items: center;
     /* flex wrap for media queries*/
     margin-top: 50px;
 }
@@ -491,15 +492,44 @@ h6 {
     margin: 0 24px;
 }
 
-.business__primary {
-    color: white;
-    background-color: rgb(100 21 255);
+
+.personal__border--color {
+    position: absolute;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;    
+    height: 10px;
+    width: 352px;
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
 }
+
+.enterprise__border--color {
+    position: absolute;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;    
+    height: 10px;
+    width: 352px;
+    background: linear-gradient(115deg, rgb(245,101,101) 0%, rgb(254,178,178) 100%);
+    
+}
+
 
 .plan__title--wrapper {
     padding: 40px 0;
-    border: 2px solid rgb(113 128 150);
+    border: 2px solid rgb(226, 232, 240);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    
+}
 
+
+.plan__title--business {
+    padding: 40px 0;
+    border-bottom: 2px solid #8e7db4;
+    border-left: 2px solid rgb(226, 232, 240);
+    border-right: 2px solid rgb(226, 232, 240);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    
 }
 
 h4 {
@@ -520,12 +550,79 @@ h4 {
 }
 
 .plan__features {
-    border-bottom: 2px solid rgb(113 128 150);
-    border-left: 2px solid rgb(113 128 150);
-    border-right: 2px solid rgb(113 128 150);
+    border-bottom: 2px solid rgb(226, 232, 240);
+    border-left: 2px solid rgb(226, 232, 240);
+    border-right: 2px solid rgb(226, 232, 240);
+    padding: 32px;
+}
+
+
+.plan__features--business {
+    border-bottom: 2px solid #8e7db4;
+    border-left: 2px solid rgb(226, 232, 240);
+    border-right: 2px solid rgb(226, 232, 240);
     padding: 32px;
 }
 
 .feature {
-    margin-top: 16px;
+    margin-top: 20px ;
+    color: rgb(113 128 150);
+}
+
+.business__feature {
+    margin-top: 20px;
+}
+
+
+.btn__container {
+    padding: 36px;
+    border-bottom: 2px solid rgb(226, 232, 240);
+    border-left: 2px solid rgb(226, 232, 240);
+    border-right: 2px solid rgb(226, 232, 240);
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.personal__btn {
+    width: 100%;
+    max-width: 200px;
+    height: 60px;
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+    color: white;
+    border-radius: 9999px;
+    font-size: 14px;
+    font-weight: 600;
+    border-style: none;
+    
+}
+.business__btn {
+    width: 100%;
+    max-width: 200px;
+    height: 60px;
+    background-color: white;
+    color: rgb(100 21 255);
+    border-radius: 9999px;
+    font-size: 14px;
+    font-weight: 600;
+    border-style: none;
+    
+}
+.enterprise__btn {
+    width: 100%;
+    max-width: 200px;
+    height: 60px;
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+    color: white;
+    border-radius: 9999px;
+    font-size: 14px;
+    font-weight: 600;
+    border-style: none;
+    
+}
+
+.business__primary {
+    color: white;
+    background-color: #7342d6;
+    background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+    border-radius: 8px
 }
