--- a/style.css
+++ b/style.css
@@ -478,8 +478,8 @@ h6 {
 
 .plans {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    /* flex wrap for media queries*/
     margin-top: 50px;
 }
 
@@ -490,6 +490,7 @@ h6 {
     flex-direction: column;
     text-align: center;
     margin: 0 24px;
+    max-width: 350px;
 }
 
 
@@ -498,7 +499,7 @@ h6 {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;    
     height: 10px;
-    width: 352px;
+    width: 350px;
     background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
 }
 
@@ -507,7 +508,7 @@ h6 {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;    
     height: 10px;
-    width: 352px;
+    width: 350px;
     background: linear-gradient(115deg, rgb(245,101,101) 0%, rgb(254,178,178) 100%);
     
 }
@@ -625,4 +626,232 @@ h4 {
     background-color: #7342d6;
     background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
     border-radius: 8px
+}
+
+
+/* TESTIMONIALS */
+
+.testimonials__container {
+    display: flex;
+}
+
+.testimonials__img {
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.testimonials__wrapper {
+    width: 50%;
+    margin-left: 60px;
+}
+
+.testimonials__description {
+    margin: 25px 0 48px 0;
+    line-height: 1.5;
+    color: rgb(113 128 150);
+    font-size: 20px;
+    font-weight: 500;
+}
+
+
+.five__stars {
+    color: rgb(248, 155, 48);
+}
+
+.testimonials__subtitle {
+    margin: 20px 0;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.testimonials__para {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.625;
+    color: rgb(74, 85, 104);
+    margin-bottom: 34px;
+}
+
+
+.testimonials__authors {
+    display: flex;
+    justify-content: space-between;
+}
+
+.author__container {
+    display: flex;
+    align-items: center;
+}
+
+.author__img {
+    height: 80px;
+    max-width: 80px;
+    margin-right: 20px;
+    border-radius: 9999px;
+    overflow: hidden;  
+}
+
+.author__name {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.author__credentials {
+    margin-top: 5px;
+    color: rgb(124 139 161);
+    font-weight: 500;
+}
+
+
+.testimonials__btn--container {
+    display: flex;
+    align-items: center;
+}
+
+.testimonials__btn {
+    border-radius: 9999px;
+    margin: 0 12px;
+    font-size: 18px;
+    background-color: rgb(237 242 247);
+    color: rgb(100 21 255);
+    padding: 12px 14px;
+    border-style: none;
+}
+
+.divider {
+    border: 1px solid rgb(237 242 247);
+    height: 50%;
+}
+
+
+/* GET STARTED */
+
+.purple__box--container {
+    background-color: rgb(100 21 255);
+    border-radius: 5px;
+}
+
+.get__started--description {
+    display: flex;
+    padding: 90px;
+    margin: 0 48px;
+}
+
+.get__started--para {
+    font-size: 30px;
+    font-weight: 700;
+    color: white;
+    width: 50%;
+}
+
+.btn__wrapper {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.get__started--btn {
+    max-width: 200px;
+    background: rgb(245, 101, 101);
+    color: white;
+    border-radius: 9999px;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    border-style: none;
+    padding: 18px 36px;
+    margin: 0 24px;
+}
+
+.contact__us--btn {
+    max-width: 200px;
+    background: rgb(100 21 255);
+    color: white;
+    border: 2px solid white;
+    border-radius: 9999px;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    padding: 18px 36px;
+    margin-left: 24px;
+}
+
+
+/* FOOTER */
+
+.footer__color {
+    background-color: rgb(100 21 255);
+}
+
+
+.link__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.link {
+    display: flex;
+    flex-direction: column;
+    width: calc(100%/5);
+    align-items: center;
+}
+
+.link__title {
+    color: white;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+}
+
+.links {
+    color: white;
+    text-decoration: none;
+    margin-top: 24px;
+}
+
+.footer__divider {
+    margin: 56px 0;
+    border: 1px solid rgb(237 242 247);
+    opacity: 20%;
+}
+
+
+.footer__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+}
+
+.footer__title {
+    display: flex;
+    color: white;
+}
+
+.footer__para {
+    color: rgb(203 213 224);
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: .5px;
+}
+
+.social__logos {
+    display: flex;
+}
+
+.social__logo {
+    color: black;
+    font-size: 18px;
+    border: 2px solid white;
+    border-radius: 9999px;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    padding: 18px;
+    margin-right: 12px;
 }
